# braidinfer

./: .gitignore  API.md  ARCHITECTURE.md  ATTENTION_MECHANISM_ISSUE.md  CONTEXT_MANAGER.md  CONTEXT_MANAGER_SUMMARY.md  CUSTOM_KERNEL_FIX.md  DIRECT_INFERENCE.md  DIRECT_INFERENCE_SUMMARY.md  FINAL_STATUS.md  FLASHINFER.md  FLASH_ATTN.md  FLASH_ATTN_FINE.md  FUSED_KERNEL_ANALYSIS.md  GEMINI_ADVICE.md  IMPLEMENTATION_SUMMARY.md  KERNEL_ANALYSIS.md  KERNEL_FIX_SUMMARY.md  KERNEL_PERFORMANCE_EXPLAINED.md  LLAMA_CPP_ANALYSIS.md  LLAMA_CPP_CUDA_ANALYSIS.md  LLAMA_CPP_PERFORMANCE_ANALYSIS.md  LOAD_KV_CACHE.md  MODELS.txt  MODEL_COMPATIBILITY_REPORT.md  MODEL_SUPPORT_GUIDE.md  NUMERICAL_PRECISION_ANALYSIS.md  PERFORMANCE_REALITY.md  PRECISION_ANALYSIS_SUMMARY.md  PURE_CONTEXT_CLI.md  QWEN3_NUMERICAL_STABILITY_GUIDE.md  README.md  ROADMAP.md  TEST_README.md  TODO_CM.md  USER_GUIDE.md  bench.py  chat.py  chat_chunked.py  cli.py  (+39 more)
.claude/: ARCHITECTURE_VERIFICATION.md  ATTENTION_OUTPUT_FUSION_PLAN.md  BIG_PICTURE.md  BOTTLENECK_ANALYSIS.md  CASCADE_ATTENTION_SUMMARY.md  CHUNKED_ATTENTION_ISSUE_SUMMARY.md  CLEANUP_SUMMARY.md  CUDA_GRAPH_ANALYSIS.md  CUSTOM_CUDA_KERNELS_ANALYSIS.md  FLASHINFER_INTEGRATION_BUG_SUMMARY.md  FLASHINFER_WRAPPER_PLAN.md  FUSED_KERNEL_COMPLETE.md  GIBBERISH_FIX_SUMMARY.md  INTEGRATION_PLAN.md  LMCACHE_VS_FLASHINFER_COMPARISON.md  MINIMAL_FLOAT32_FINDINGS.md  MLP_FUSION_ANALYSIS.md  MLP_FUSION_FINDINGS.md  MODEL_TESTING_PLAN.md  NEXT_SPRINT.md  NUMERICAL_INSTABILITY_INVESTIGATION.md  NUMERICAL_INSTABILITY_ROOT_CAUSE.md  PERFORMANCE_SUMMARY_HONEST.md  SPRINT.md  (+16 more)
(+210 files in other folders)
